--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-29 23:55:38 -0500 
+%% Created for Evan Bollig at 2013-09-02 11:59:31 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{BolligRBFFixedGrid,
+	Author = {E. F. Bollig},
+	Date-Added = {2013-09-02 16:57:28 +0000},
+	Date-Modified = {2013-09-02 16:59:31 +0000},
+	Howpublished = {\url{https://github.com/bollig/rbf_hash_query}},
+	Title = {A Fixed-Grid Prototype for RBF Stencil Generation With Various Space Filling Curves},
+	Year = {2012}}
 
 @inproceedings{Purcell2003,
 	Author = {Timothy J. Purcell and Craig Donner and Mike Cammarano and Henrik Wann Jensen and Pat Hanrahan},
