--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -308,8 +308,6 @@ The original release of $kd$-Tree Matlab (pre-2012) was in widespread use throug
 
 Recently, with the release of $kd$-Tree Matlab on Google Code (\cite{TagliasacchiGC}), the author significantly improved the performance of the build process to achieve the $O(N \log N)$ behavior expected for a Point $k$-D Tree with cyclic splitting at median nodes. 
 
-Figure~\ref{fig:
-
 Figure~\ref{fig:stencil_query_old_and_new} compares the total time to generate $N$ stencils of size $n=50$ with three methods: \cite{Tagliasacchi2008}, our hash-based neighbor query, and the improved KDTree from \cite{Tagliasacchi2012}. 
 Until the new release of KDTree, our algorithm was a major improvement to the performance of stencil generation. The hash-based approach achieved greater than 
 
@@ -506,9 +504,9 @@ Open item from to this section include:
 %TODO: add RCM and fix order
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/node_orderings.eps} \\
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d3_n31_hn6.eps} \\
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d2_n31_hn6.eps} 
+\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/node_orderings.png} \\
+\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d3_n31_hn6.png} \\
+\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d2_n31_hn6.png} 
 \caption{In order: a) node ordering test cases; b) original ordering of regular grid (raster); c) coarse grid overlay for hash functions ($hnx = 6$); d) example stencil ($n=31$) spanning multiple Z's; e) spy of DM after orderings. \authnote{TODO: Raster on top left. Add RCM ordering to top right.}  3) Spy impact on MD node set $N=4096$, stencil size $n=31$, $h_n = 6$ }
 \label{fig:orderings}
 \end{figure}
@@ -518,14 +516,14 @@ The RCM algorithm is a breadth first search over stencils to order them based on
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/node_ordering_rcm_n5.eps} 
+\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/node_ordering_rcm_n5.png} 
 \caption{An RCM reordering of nodes based on stencils $n=5$ nearest neighbors per node.}
 \label{fig:orderings}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/dm_node_orderings_md4096_n31_hn10-eps-converted-to.pdf} 
+\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/dm_node_orderings_md4096_n31_hn10.png} 
 \caption{In order: a) node ordering test cases; b) original ordering of regular grid (raster); c) coarse grid overlay for hash functions ($hnx = 6$); d) example stencil ($n=31$) spanning multiple Z's; e) spy of DM after orderings. \authnote{TODO: Raster on top left. Add RCM ordering to top right.}  3) Spy impact on MD node set $N=4096$, stencil size $n=31$, $h_n = 6$ }
 \label{fig:orderings}
 \end{figure}
