Build faster. Can replace with eps when time comes for high res render

--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -504,9 +504,9 @@ Open item from to this section include:
 %TODO: add RCM and fix order
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/node_orderings.png} \\
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d3_n31_hn6.png} \\
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d2_n31_hn6.png} 
+\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/node_orderings.png} \\
+\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d3_n31_hn6.png} \\
+\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d2_n31_hn6.png} 
 \caption{In order: a) node ordering test cases; b) original ordering of regular grid (raster); c) coarse grid overlay for hash functions ($hnx = 6$); d) example stencil ($n=31$) spanning multiple Z's; e) spy of DM after orderings. \authnote{TODO: Raster on top left. Add RCM ordering to top right.}  3) Spy impact on MD node set $N=4096$, stencil size $n=31$, $h_n = 6$ }
 \label{fig:orderings}
 \end{figure}
@@ -516,14 +516,14 @@ The RCM algorithm is a breadth first search over stencils to order them based on
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/node_ordering_rcm_n5.png} 
+\includegraphics[width=0.4\textwidth]{rbffd_methods_content/hashing/node_ordering_rcm_n5.png} 
 \caption{An RCM reordering of nodes based on stencils $n=5$ nearest neighbors per node.}
 \label{fig:orderings}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{rbffd_methods_content/hashing/dm_node_orderings_md4096_n31_hn10.png} 
+\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/dm_node_orderings_md4096_n31_hn10.png} 
 \caption{In order: a) node ordering test cases; b) original ordering of regular grid (raster); c) coarse grid overlay for hash functions ($hnx = 6$); d) example stencil ($n=31$) spanning multiple Z's; e) spy of DM after orderings. \authnote{TODO: Raster on top left. Add RCM ordering to top right.}  3) Spy impact on MD node set $N=4096$, stencil size $n=31$, $h_n = 6$ }
 \label{fig:orderings}
 \end{figure}
